--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
+    "express-session": "^1.16.2",
+    "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
