--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.6.2",
     "express": "^4.16.4",
     "express-session": "^1.16.2",
-    "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
